cabal-version: 3.8
name: lattice
version: 0.1.0
synopsis: Lattice Compositor - Haskell library (types, state, services, FFI)
description: Core logic ported from TypeScript UI; zero type escapes, Either Text for errors.
license: MIT
license-file: LICENSE
author: Lattice Compositor
maintainer: Lattice Compositor
build-type: Simple

library
  default-language: GHC2021
  hs-source-dirs:
    lattice-core/haskell
    src/haskell
    src/armitage
    src/inference/hasktorch
  exposed-modules:
    -- Core Lattice modules
    Lattice.Actions
    Lattice.Animation
    Lattice.Assets
    Lattice.BlendModes
    Lattice.Camera
    Lattice.CameraTracking
    Lattice.DataAsset
    Lattice.Effects
    Lattice.EffectsPresets
    Lattice.Entities
    Lattice.Enums
    Lattice.Events
    Lattice.Export
    Lattice.LayerData
    Lattice.LayerStyles
    Lattice.Masks
    Lattice.MeshWarp
    Lattice.Metrics
    Lattice.Particles
    Lattice.Physics
    Lattice.Presets
    Lattice.Primitives
    Lattice.Project
    Lattice.Shapes
    Lattice.Spline
    Lattice.TemplateBuilder
    Lattice.Text
    Lattice.Transform
    Lattice.Triggers
    -- Schemas
    Lattice.Schemas.AI.MotionSuggestionSchema
    Lattice.Schemas.Assets.AssetsSchema
    Lattice.Schemas.DataAsset.DataAssetSchema
    Lattice.Schemas.DragDrop.ProjectItemSchema
    Lattice.Schemas.Effects.EffectsSchema
    Lattice.Schemas.Exports.ATISchema
    Lattice.Schemas.Exports.CameraSchema
    Lattice.Schemas.Exports.ControlNetSchema
    Lattice.Schemas.Exports.DepthSchema
    Lattice.Schemas.Exports.FrameSequenceSchema
    Lattice.Schemas.Exports.LightXSchema
    Lattice.Schemas.Exports.MeshDeformSchema
    Lattice.Schemas.Exports.NormalSchema
    Lattice.Schemas.Exports.ParticleSchema
    Lattice.Schemas.Exports.SCAILSchema
    Lattice.Schemas.Exports.TTMSchema
    Lattice.Schemas.Exports.VACESchema
    Lattice.Schemas.Exports.WanMoveSchema
    Lattice.Schemas.Exports.WorkflowParamsSchema
    Lattice.Schemas.Imports.CameraSchema
    Lattice.Schemas.Imports.CameraTrackingSchema
    Lattice.Schemas.Layers.AnimationSchema
    Lattice.Schemas.Layers.LayerDataSchema
    Lattice.Schemas.Layers.LayerSchema
    Lattice.Schemas.Layers.PrimitivesSchema
    Lattice.Schemas.Layers.TransformSchema
    Lattice.Schemas.LayerStyles.LayerStylesSchema
    Lattice.Schemas.Masks.MasksSchema
    Lattice.Schemas.MeshWarp.MeshWarpSchema
    Lattice.Schemas.ComfyUI.Targets
    Lattice.Schemas.Physics.PhysicsSchema
    Lattice.Schemas.Presets.PresetsSchema
    Lattice.Schemas.Project.ProjectSchema
    Lattice.Schemas.Settings.ExportTemplateSchema
    Lattice.Schemas.Settings.ParticlePreferencesSchema
    Lattice.Schemas.Settings.RateLimitsSchema
    Lattice.Schemas.Settings.RecentProjectsSchema
    Lattice.Schemas.Settings.SessionStorageSchema
    Lattice.Schemas.Settings.ThemeSchema
    Lattice.Schemas.Settings.UserSettingsSchema
    Lattice.Schemas.Settings.ValidationLimitsSchema
    Lattice.Schemas.Shapes.ShapesSchema
    Lattice.Schemas.SharedValidation
    Lattice.Schemas.TemplateBuilder.TemplateBuilderSchema
    -- Services
    Lattice.Services.Audio.BlendTransitions
    Lattice.Services.Audio.CurveShaping
    Lattice.Services.Audio.EnvelopeFollower
    Lattice.Services.Audio.SignalProcessing
    Lattice.Services.BlendModes.ColorSpace
    Lattice.Services.BlendModes.Operations
    Lattice.Services.Blur.Directional
    Lattice.Services.Blur.Gaussian
    Lattice.Services.Blur.Radial
    Lattice.Services.Blur.Sharpen
    Lattice.Services.Blur.StackBlur
    Lattice.Services.Color.Conversion
    Lattice.Services.Color.ValueMapping
    Lattice.Services.ColorCorrection.Adjustments
    Lattice.Services.ColorCorrection.Conversions
    Lattice.Services.ColorCorrection.Curves
    Lattice.Services.ColorCorrection.LUT
    Lattice.Services.ColorCorrection.Vignette
    Lattice.Services.ColorSpace.Conversions
    Lattice.Services.ColorSpace.TransferFunctions
    Lattice.Services.CoordinateConversion
    Lattice.Services.Depthflow.Motion
    Lattice.Services.Distort.Interpolation
    Lattice.Services.Distort.Ripple
    Lattice.Services.Distort.Warp
    Lattice.Services.Driver.Transforms
    Lattice.Services.Easing
    Lattice.Services.Effects.BlurDirectional
    Lattice.Services.Effects.BlurGaussian
    Lattice.Services.Effects.ColorAdjustment
    Lattice.Services.Effects.ColorCorrection
    Lattice.Services.Effects.ColorCurves
    Lattice.Services.Effects.ColorGlow
    Lattice.Services.Effects.ColorThreshold
    Lattice.Services.Expressions.JitterExpressions
    Lattice.Services.Expressions.MotionExpressions
    Lattice.Services.Expressions.VectorMath
    Lattice.Services.Flow.Patterns
    Lattice.Services.Interpolation
    Lattice.Services.LayerStyles.AngleOffset
    Lattice.Services.LayerStyles.BevelLighting
    Lattice.Services.LayerStyles.Morphology
    Lattice.Services.LayerTime
    Lattice.Services.Math3D.Lens
    Lattice.Services.Math3D.Mat4
    Lattice.Services.Math3D.Quat
    Lattice.Services.Math3D.Vec3
    Lattice.Services.Mesh.Deformation
    Lattice.Services.Mesh.Delaunay
    Lattice.Services.Noise.SimplexNoise
    Lattice.Services.NumericalIntegration
    Lattice.Services.Particles.Collision
    Lattice.Services.Particles.Emitter
    Lattice.Services.Particles.Forces
    Lattice.Services.Particles.Lifecycle
    Lattice.Services.Particles.Modulation
    Lattice.Services.Particles.SeededRandom
    Lattice.Services.Particles.Shapes
    Lattice.Services.Particles.SubEmitter
    Lattice.Services.Particles.Turbulence
    Lattice.Services.Particles.UpdateLoop
    Lattice.Services.Path.BezierCore
    Lattice.Services.Path.Morphing
    Lattice.Services.Physics.Cloth
    Lattice.Services.Physics.Collision
    Lattice.Services.Physics.ForceFields
    Lattice.Services.Physics.Random
    Lattice.Services.Physics.RigidBody
    Lattice.Services.Physics.Vec2
    Lattice.Services.Physics.VectorMath
    Lattice.Services.Physics.Verlet
    Lattice.Services.Shader.Transition
    Lattice.Services.ShapeOperations.Bezier
    Lattice.Services.ShapeOperations.Generators
    Lattice.Services.ShapeOperations.Point2D
    Lattice.Services.ShapeOperations.Simplify
    Lattice.Services.Stylize.Dither
    Lattice.Services.Stylize.EdgeDetection
    Lattice.Services.Stylize.Halftone
    Lattice.Services.Stylize.SortMetrics
    Lattice.Services.SVGExtrusion.Bounds
    Lattice.Services.SVGExtrusion.CapProfile
    Lattice.Services.SVGExtrusion.Simplify
    Lattice.Services.TextAnimator.Selectors
    Lattice.Services.Time.DisplacementMap
    Lattice.Services.Time.FrameBlending
    Lattice.Services.Time.OpticalFlow
    -- Utils
    Lattice.Utils.ArrayUtils
    Lattice.Utils.ColorUtils
    Lattice.Utils.ErrorHelpers
    Lattice.Utils.FpsUtils
    Lattice.Utils.Icons
    Lattice.Utils.LabColorUtils
    Lattice.Utils.Logger
    Lattice.Utils.NumericSafety
    Lattice.Utils.ResourcePool
    Lattice.Utils.SchemaValidation
    Lattice.Utils.Security
    Lattice.Utils.TypeGuards
    Lattice.Utils.TypeUtils
    Lattice.Utils.Uuid5
    Lattice.Utils.Validation
    -- Aleph modules
    Aleph.Nix
    Aleph.Nix.Derivation
    Aleph.Nix.FFI
    Aleph.Nix.Package
    Aleph.Nix.Packages.AbseilCpp
    Aleph.Nix.Packages.Catch2
    Aleph.Nix.Packages.Cutlass
    Aleph.Nix.Packages.Fmt
    Aleph.Nix.Packages.HelloWrapped
    Aleph.Nix.Packages.Jq
    Aleph.Nix.Packages.Mdspan
    Aleph.Nix.Packages.NlohmannJson
    Aleph.Nix.Packages.Nvidia
    Aleph.Nix.Packages.Rapidjson
    Aleph.Nix.Packages.Spdlog
    Aleph.Nix.Packages.ZlibNg
    Aleph.Nix.Syntax
    Aleph.Nix.Tools
    Aleph.Nix.Tools.Install
    Aleph.Nix.Tools.Jq
    Aleph.Nix.Tools.PatchElf
    Aleph.Nix.Tools.Substitute
    Aleph.Nix.Types
    Aleph.Nix.Value
    Aleph.Script
    Aleph.Script.Clap
    Aleph.Script.Config
    Aleph.Script.Getopt
    Aleph.Script.Nvidia.Config
    Aleph.Script.Nvidia.Container
    Aleph.Script.Nvidia.Versions
    Aleph.Script.Nvidia.Wheel
    Aleph.Script.Oci
    Aleph.Script.Tools
    Aleph.Script.Tools.Bat
    Aleph.Script.Tools.Bwrap
    Aleph.Script.Tools.CMake
    Aleph.Script.Tools.Crane
    Aleph.Script.Tools.Deadnix
    Aleph.Script.Tools.Delta
    Aleph.Script.Tools.Dust
    Aleph.Script.Tools.Fd
    Aleph.Script.Tools.Find
    Aleph.Script.Tools.Grep
    Aleph.Script.Tools.Gzip
    Aleph.Script.Tools.Hyperfine
    Aleph.Script.Tools.Jq
    Aleph.Script.Tools.Ls
    Aleph.Script.Tools.Rg
    Aleph.Script.Tools.Rsync
    Aleph.Script.Tools.Sed
    Aleph.Script.Tools.Statix
    Aleph.Script.Tools.Stylua
    Aleph.Script.Tools.Taplo
    Aleph.Script.Tools.Tar
    Aleph.Script.Tools.Tokei
    Aleph.Script.Tools.Wget
    Aleph.Script.Tools.Xargs
    Aleph.Script.Tools.Zoxide
    Aleph.Script.Vfio
    Aleph.Script.Vm
    Aleph.Script.Vm.Config
    -- Armitage build system (DICE, CAS, Remote Execution)
    Armitage.Builder
    Armitage.CAS
    Armitage.DICE
    Armitage.Dhall
    Armitage.Proxy
    Armitage.RE
    Armitage.Store
    Armitage.Trace
    -- Diffusion inference (HaskTorch port of RES4LYF)
    Lattice.Diffusion
    Lattice.Diffusion.Noise
    Lattice.Diffusion.Phi
    Lattice.Diffusion.Precision.Landauer
    Lattice.Diffusion.RKCoefficients
    Lattice.Diffusion.Samplers.Exponential
    Lattice.Diffusion.Schedulers
    Lattice.Diffusion.Workflows
    Lattice.Diffusion.TensorRT.FFI
    Lattice.Diffusion.TensorRT.Engine
    Lattice.Diffusion.TensorRT.Pipeline
  -- Note: Aleph.Nix.Examples.* are standalone WASM plugins
  -- They export the same 'nix_wasm_init_v1' symbol and cannot be linked together
  -- Build them separately with: ghc -o fib.wasm Aleph/Nix/Examples/Fib.hs
  other-modules:
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    array >=0.5 && <0.6,
    async >=2.2 && <3,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    cryptohash-sha1 >=0.11 && <0.12,
    cryptohash-sha256 >=0.11 && <0.12,
    crypton >=1.0 && <1.1,
    data-default >=0.7 && <0.9,
    dhall >=1.41 && <1.43,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    foldl >=1.4 && <1.5,
    grapesy >=1.0 && <2.0,
    hashable >=1.4 && <1.6,
    hourglass >=0.2 && <0.3,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    http-types >=0.12 && <0.13,
    megaparsec >=9.2 && <10,
    mtl >=2.3 && <2.4,
    network >=3.1 && <3.3,
    optparse-applicative >=0.18 && <0.19,
    pem >=0.2 && <0.3,
    crypton-pem >=0.3 && <0.4,
    process >=1.6 && <1.7,
    regex-tdfa >=1.3 && <1.4,
    scientific >=0.3 && <0.4,
    shelly >=1.12 && <1.13,
    stm >=2.5 && <2.6,
    temporary >=1.3 && <1.4,
    text >=2.0 && <3,
    time >=1.12 && <1.15,
    tls >=1.6 && <3.0,
    unix >=2.7 && <2.9,
    unordered-containers >=0.2 && <0.3,
    vector >=0.13 && <0.14,
    crypton-x509 >=1.7 && <1.9,
    crypton-asn1-encoding >=0.10 && <0.11,
    crypton-asn1-parse >=0.10 && <0.11,
    crypton-asn1-types >=0.4 && <0.5,
    crypton-pem >=0.3 && <0.4,
    asn1-types >=0.3 && <0.4,
    asn1-encoding >=0.9 && <0.10,
    random >=1.2 && <1.3

-- Property-based API tests using haskemathesis
-- Run: cabal test render-api-property
-- Or against live server: cabal run render-api-test -- --url https://sync.render.weyl.ai
test-suite render-api-property
  type: exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs: tests/property
  main-is: RenderApiSpec.hs
  build-depends:
    base >=4.18 && <5,
    containers >=0.6 && <0.8,
    haskemathesis,
    hspec >=2.11 && <3,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    text >=2.0 && <3

-- Armitage build system CLI
-- Commands: build, analyze, run, trace, proxy, store, cas
executable armitage
  default-language: GHC2021
  hs-source-dirs: src/armitage
  main-is: Main.hs
  other-modules:
    Armitage.Builder
    Armitage.CAS
    Armitage.DICE
    Armitage.Dhall
    Armitage.Proxy
    Armitage.RE
    Armitage.Store
    Armitage.Trace
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    async >=2.2 && <3,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    cryptohash-sha256 >=0.11 && <0.12,
    crypton >=1.0 && <1.1,
    data-default >=0.7 && <0.9,
    dhall >=1.41 && <1.43,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    grapesy >=1.0 && <2.0,
    hashable >=1.4 && <1.6,
    hourglass >=0.2 && <0.3,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    http-types >=0.12 && <0.13,
    megaparsec >=9.2 && <10,
    mtl >=2.3 && <2.4,
    network >=3.1 && <3.3,
    optparse-applicative >=0.18 && <0.19,
    pem >=0.2 && <0.3,
    crypton-pem >=0.3 && <0.4,
    process >=1.6 && <1.7,
    shelly >=1.12 && <1.13,
    stm >=2.5 && <2.6,
    temporary >=1.3 && <1.4,
    text >=2.0 && <3,
    time >=1.12 && <1.15,
    tls >=1.6 && <3.0,
    unix >=2.7 && <2.9,
    unordered-containers >=0.2 && <0.3,
    vector >=0.13 && <0.14,
    crypton-x509 >=1.7 && <1.9,
    asn1-types >=0.3 && <0.4,
    asn1-encoding >=0.9 && <0.10

-- Armitage witness proxy
executable armitage-proxy
  default-language: GHC2021
  hs-source-dirs: src/armitage
  main-is: ProxyMain.hs
  other-modules:
    Armitage.Proxy
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    async >=2.2 && <3,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    cryptohash-sha256 >=0.11 && <0.12,
    crypton >=1.0 && <1.1,
    data-default >=0.7 && <0.9,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    hourglass >=0.2 && <0.3,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    http-types >=0.12 && <0.13,
    network >=3.1 && <3.3,
    pem >=0.2 && <0.3,
    crypton-pem >=0.3 && <0.4,
    stm >=2.5 && <2.6,
    text >=2.0 && <3,
    time >=1.12 && <1.15,
    tls >=1.6 && <3.0,
    crypton-x509 >=1.7 && <1.9,
    asn1-types >=0.3 && <0.4,
    asn1-encoding >=0.9 && <0.10

-- HTTP REST API server (implements OpenAPI spec)
-- Run: cabal run lattice-server -- --port 8080
executable lattice-server
  default-language: GHC2021
  hs-source-dirs: src/server
  main-is: Main.hs
  other-modules:
    Api.Generate
    Generate.Models
    Generate.Safetensors
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    base64-bytestring >=1.2 && <1.3,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    http-types >=0.12 && <0.13,
    lattice,
    mmap >=0.5 && <0.6,
    random >=1.2 && <1.3,
    text >=2.0 && <3,
    vector >=0.13 && <0.14,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.5

-- Criterion benchmarks for performance-critical services
-- Run: cabal bench lattice-bench
benchmark lattice-bench
  type: exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -O2 -rtsopts
  build-depends:
    base >=4.18 && <5,
    criterion >=1.6 && <1.7,
    deepseq >=1.4 && <1.6,
    lattice,
    vector >=0.13 && <0.14

