"""s4: GPU inference runtime for NVFP4 quantization and SageAttention."""

module(
    name = "s4",
    version = "0.1.0",
)

# Core Bazel rules.
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")

# CUDA support for device code.
bazel_dep(name = "rules_cuda", version = "0.2.1")

cuda_toolchain = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda_toolchain.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",  # Auto-detect from CUDA_PATH or /usr/local/cuda.
)
use_repo(cuda_toolchain, "local_cuda")

register_toolchains("@local_cuda//:all")

# Testing frameworks.
bazel_dep(name = "catch2", version = "3.5.2")
bazel_dep(name = "rapidcheck", version = "0.0.0-20230113-d9482c6")

# Python bindings (optional).
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
bazel_dep(name = "rules_python", version = "0.27.1")

