[project]
name = "llm-with-proofs-from-scratch-internal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chz>=0.4.0",
    "litellm>=1.80.9",
    "plotly>=6.5.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "tinker>=0.7.0",
    "torch>=2.0.0",
]
